// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TOTPSetupComp test render test render with code and setupMessage 1`] = `
<FormSection
  theme={
    Object {
      "a": Object {},
      "actionRow": Object {},
      "button": Object {},
      "container": Object {},
      "formContainer": Object {},
      "formField": Object {},
      "formRow": Object {},
      "formSection": Object {},
      "hint": Object {},
      "input": Object {},
      "inputLabel": Object {},
      "photoPickerButton": Object {},
      "photoPlaceholder": Object {},
      "radio": Object {},
      "sectionBody": Object {},
      "sectionFooter": Object {},
      "sectionFooterPrimaryContent": Object {},
      "sectionFooterSecondaryContent": Object {},
      "sectionHeader": Object {},
      "signInButton": Object {},
      "signInButtonContent": Object {},
      "signInButtonIcon": Object {},
      "strike": Object {},
      "strikeContent": Object {},
    }
  }
>
  <Toast
    onClose={[Function]}
  >
    message
  </Toast>
  <SectionHeader
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  >
    Scan then enter verification code
  </SectionHeader>
  <SectionBody
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  >
    <div>
      <div
        className="Totp__totpQrcode___3OH-m"
      >
        <QRCode
          bgColor="#FFFFFF"
          fgColor="#000000"
          level="L"
          renderAs="canvas"
          size={128}
          value="code"
        />
      </div>
      <InputLabel>
        Enter Security Code:
      </InputLabel>
      <Input
        autoFocus={true}
        key="totpCode"
        name="totpCode"
        onChange={[Function]}
        theme={
          Object {
            "a": Object {},
            "actionRow": Object {},
            "button": Object {},
            "container": Object {},
            "formContainer": Object {},
            "formField": Object {},
            "formRow": Object {},
            "formSection": Object {},
            "hint": Object {},
            "input": Object {},
            "inputLabel": Object {},
            "photoPickerButton": Object {},
            "photoPlaceholder": Object {},
            "radio": Object {},
            "sectionBody": Object {},
            "sectionFooter": Object {},
            "sectionFooterPrimaryContent": Object {},
            "sectionFooterSecondaryContent": Object {},
            "sectionHeader": Object {},
            "signInButton": Object {},
            "signInButtonContent": Object {},
            "signInButtonIcon": Object {},
            "strike": Object {},
            "strikeContent": Object {},
          }
        }
      />
    </div>
    message
  </SectionBody>
  <SectionFooter>
    <Button
      onClick={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
    >
      Verify Security Token
    </Button>
  </SectionFooter>
</FormSection>
`;

exports[`TOTPSetupComp test render test render without code or setupMessage 1`] = `
<FormSection
  theme={
    Object {
      "a": Object {},
      "actionRow": Object {},
      "button": Object {},
      "container": Object {},
      "formContainer": Object {},
      "formField": Object {},
      "formRow": Object {},
      "formSection": Object {},
      "hint": Object {},
      "input": Object {},
      "inputLabel": Object {},
      "photoPickerButton": Object {},
      "photoPlaceholder": Object {},
      "radio": Object {},
      "sectionBody": Object {},
      "sectionFooter": Object {},
      "sectionFooterPrimaryContent": Object {},
      "sectionFooterSecondaryContent": Object {},
      "sectionHeader": Object {},
      "signInButton": Object {},
      "signInButtonContent": Object {},
      "signInButtonIcon": Object {},
      "strike": Object {},
      "strikeContent": Object {},
    }
  }
>
  <SectionHeader
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  >
    Scan then enter verification code
  </SectionHeader>
  <SectionBody
    theme={
      Object {
        "a": Object {},
        "actionRow": Object {},
        "button": Object {},
        "container": Object {},
        "formContainer": Object {},
        "formField": Object {},
        "formRow": Object {},
        "formSection": Object {},
        "hint": Object {},
        "input": Object {},
        "inputLabel": Object {},
        "photoPickerButton": Object {},
        "photoPlaceholder": Object {},
        "radio": Object {},
        "sectionBody": Object {},
        "sectionFooter": Object {},
        "sectionFooterPrimaryContent": Object {},
        "sectionFooterSecondaryContent": Object {},
        "sectionHeader": Object {},
        "signInButton": Object {},
        "signInButtonContent": Object {},
        "signInButtonIcon": Object {},
        "strike": Object {},
        "strikeContent": Object {},
      }
    }
  />
  <SectionFooter>
    <Button
      onClick={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      theme={
        Object {
          "a": Object {},
          "actionRow": Object {},
          "button": Object {},
          "container": Object {},
          "formContainer": Object {},
          "formField": Object {},
          "formRow": Object {},
          "formSection": Object {},
          "hint": Object {},
          "input": Object {},
          "inputLabel": Object {},
          "photoPickerButton": Object {},
          "photoPlaceholder": Object {},
          "radio": Object {},
          "sectionBody": Object {},
          "sectionFooter": Object {},
          "sectionFooterPrimaryContent": Object {},
          "sectionFooterSecondaryContent": Object {},
          "sectionHeader": Object {},
          "signInButton": Object {},
          "signInButtonContent": Object {},
          "signInButtonIcon": Object {},
          "strike": Object {},
          "strikeContent": Object {},
        }
      }
    >
      Verify Security Token
    </Button>
  </SectionFooter>
</FormSection>
`;
